--- a/resources/ui/wiibafu.ui
+++ b/resources/ui/wiibafu.ui
@@ -575,26 +575,6 @@
               </widget>
              </item>
              <item row="11" column="0">
-              <widget class="QLabel" name="label_21">
-               <property name="minimumSize">
-                <size>
-                 <width>110</width>
-                 <height>24</height>
-                </size>
-               </property>
-               <property name="text">
-                <string>Container:</string>
-               </property>
-              </widget>
-             </item>
-             <item row="11" column="1">
-              <widget class="QLineEdit" name="infoTab_lineEdit_Container">
-               <property name="readOnly">
-                <bool>true</bool>
-               </property>
-              </widget>
-             </item>
-             <item row="12" column="0">
               <widget class="QLabel" name="label_23">
                <property name="minimumSize">
                 <size>
@@ -607,14 +587,14 @@
                </property>
               </widget>
              </item>
-             <item row="12" column="1">
+             <item row="11" column="1">
               <widget class="QLineEdit" name="infoTab_lineEdit_WBFSSlot">
                <property name="readOnly">
                 <bool>true</bool>
                </property>
               </widget>
              </item>
-             <item row="13" column="0">
+             <item row="12" column="0">
               <widget class="QLabel" name="lanel_8">
                <property name="minimumSize">
                 <size>
@@ -623,12 +603,12 @@
                 </size>
                </property>
                <property name="text">
-                <string>File/Partition:</string>
+                <string>Source:</string>
                </property>
               </widget>
              </item>
-             <item row="13" column="1">
-              <widget class="QLineEdit" name="infoTab_lineEdit_FileName">
+             <item row="12" column="1">
+              <widget class="QLineEdit" name="infoTab_lineEdit_Source">
                <property name="readOnly">
                 <bool>true</bool>
                </property>
