--- a/resources/ui/settings.ui
+++ b/resources/ui/settings.ui
@@ -7,11 +7,15 @@
     <x>0</x>
     <y>0</y>
     <width>500</width>
-    <height>330</height>
+    <height>326</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Settings</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="../wiibafu.qrc">
+    <normaloff>:/appicon/images/appicon.png</normaloff>:/appicon/images/appicon.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
@@ -62,19 +66,6 @@
      </item>
     </widget>
    </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="locale">
-      <locale language="English" country="UnitedStates"/>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Apply|QDialogButtonBox::Cancel|QDialogButtonBox::Ok|QDialogButtonBox::RestoreDefaults</set>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="1">
     <widget class="QStackedWidget" name="stackedWidget">
      <property name="locale">
@@ -87,7 +78,7 @@
       <number>0</number>
      </property>
      <widget class="QWidget" name="Main">
-      <layout class="QVBoxLayout" name="verticalLayout_2">
+      <layout class="QVBoxLayout" name="verticalLayout_4">
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_3">
          <item>
@@ -212,139 +203,136 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_4">
          <item>
-          <widget class="QLabel" name="label_3">
-           <property name="text">
-            <string>Logging:</string>
+          <layout class="QVBoxLayout" name="verticalLayout_3">
+           <item>
+            <widget class="QLabel" name="label_3">
+             <property name="text">
+              <string>Logging mode:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QComboBox" name="main_comboBox_Logging">
+             <item>
+              <property name="text">
+               <string>All</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Errors only</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>None</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <widget class="Line" name="line">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QComboBox" name="main_comboBox_Logging">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
+          <layout class="QVBoxLayout" name="verticalLayout_2">
            <item>
-            <property name="text">
-             <string>All</string>
-            </property>
+            <widget class="QLabel" name="label_5">
+             <property name="text">
+              <string>Language for titles/covers:</string>
+             </property>
+            </widget>
            </item>
            <item>
-            <property name="text">
-             <string>Errors only</string>
-            </property>
+            <widget class="QComboBox" name="main_comboBox_Language">
+             <item>
+              <property name="text">
+               <string>English</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>France</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>German</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Spain</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Italy</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Netherland</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Portuguese</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Northern Sami</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Denmark</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Norway</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Finland</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Russia</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Japan</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Korea</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Taiwan</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>China</string>
+              </property>
+             </item>
+            </widget>
            </item>
-           <item>
-            <property name="text">
-             <string>None</string>
-            </property>
-           </item>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="label_5">
-           <property name="text">
-            <string>Language:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QComboBox" name="main_comboBox_Language">
-           <property name="minimumSize">
-            <size>
-             <width>100</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>100</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <item>
-            <property name="text">
-             <string>English</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>France</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>German</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Spain</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Italy</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Netherland</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Portuguese</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Northern Sami</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Denmark</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Norway</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Finland</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Russia</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Japan</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Korea</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Taiwan</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>China</string>
-            </property>
-           </item>
-          </widget>
+          </layout>
          </item>
         </layout>
        </item>
@@ -891,9 +879,24 @@
      </widget>
     </widget>
    </item>
+   <item row="1" column="0" colspan="2">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="locale">
+      <locale language="English" country="UnitedStates"/>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Apply|QDialogButtonBox::Cancel|QDialogButtonBox::Ok|QDialogButtonBox::RestoreDefaults</set>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../wiibafu.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
