Transfer DVD to image added, file name in DVD list obsolete

--- a/resources/ui/wiibafu.ui
+++ b/resources/ui/wiibafu.ui
@@ -238,6 +238,13 @@
              </property>
             </widget>
            </item>
+           <item>
+            <widget class="QPushButton" name="dvdTab_pushButton_TransferToImage">
+             <property name="text">
+              <string>Transfer to image</string>
+             </property>
+            </widget>
+           </item>
           </layout>
          </widget>
         </item>
