--- a/resources/ui/wiibafudialog.ui
+++ b/resources/ui/wiibafudialog.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>470</width>
-    <height>128</height>
+    <height>161</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -31,7 +31,7 @@
      </property>
      <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="label_Directory">
         <property name="text">
          <string>Directory:</string>
         </property>
@@ -47,14 +47,14 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
+      <item row="4" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
          <string>Image format:</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="4" column="1">
        <widget class="QComboBox" name="comboBox_ImageFormat">
         <item>
          <property name="text">
@@ -76,6 +76,23 @@
           <string>Wii Backup File System Container (*.wbfs)</string>
          </property>
         </item>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLineEdit" name="lineEdit_FilePath"/>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_FilePath">
+        <property name="text">
+         <string>File path:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2">
+       <widget class="QPushButton" name="pushButton_OpenFile">
+        <property name="text">
+         <string>Open file</string>
+        </property>
        </widget>
       </item>
      </layout>
