Cover region bug fixed

--- a/resources/ui/wiibafu.ui
+++ b/resources/ui/wiibafu.ui
@@ -770,6 +770,11 @@
                  </item>
                  <item>
                   <property name="text">
+                   <string>American</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
                    <string>France</string>
                   </property>
                  </item>
