--- a/resources/ui/settings.ui
+++ b/resources/ui/settings.ui
@@ -257,6 +257,11 @@
              </item>
              <item>
               <property name="text">
+               <string>American</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
                <string>France</string>
               </property>
              </item>
