--- a/resources/ui/settings.ui
+++ b/resources/ui/settings.ui
@@ -346,21 +346,28 @@
      <widget class="QWidget" name="GameLists">
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_2">
-         <item>
+        <layout class="QGridLayout" name="gridLayout_16">
+         <item row="0" column="0">
           <widget class="QCheckBox" name="gameLists_checkBox_ShowGrid">
            <property name="text">
             <string>Show grid</string>
            </property>
           </widget>
          </item>
-         <item>
+         <item row="0" column="2">
           <widget class="QCheckBox" name="gameLists_checkBox_AlternatingRowColors">
            <property name="locale">
             <locale language="English" country="UnitedStates"/>
            </property>
            <property name="text">
             <string>Alternating row colors</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QCheckBox" name="gameLists_checkBox_ToolTips">
+           <property name="text">
+            <string>Tool tips</string>
            </property>
           </widget>
          </item>
